[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml-toolkit"
version = "0.1.0"
description = "Personal Machine Learning Toolkit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.0",
    "pyyaml>=6.0.3",
    "torch>=2.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ml_toolkit"]
